# DoctustechAI

./: .env.example  .firebaserc  .gitignore  Dockerfile  Dockerfile.api  README.md  cloudbuild.api.yaml  cloudrun.env.yaml.example  firebase.json  langgraph.json  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/public/: config.js.example
frontend/src/: App.css  App.jsx  index.css
output/: pn_1.json  pn_2.json  pn_3.json  pn_4.json  pn_5.json  pn_6.json  pn_7.json  pn_8.json  pn_9.json  summary.csv
src/api/: __init__.py  auth.py  config.py  main.py  processing.py  schemas.py  storage.py  store.py  tasks.py  workflows.py
src/framework/: __init__.py
src/framework/io/: __init__.py
src/framework/llm/: __init__.py  client.py  config.py  json_utils.py
src/framework/utils/: __init__.py  env.py
src/hcc_pipeline/: __init__.py  __main__.py  cli.py  config.py  graph.py  graph_entry.py  logging_utils.py  models.py
src/hcc_pipeline/evaluation/: __init__.py  hcc.py
src/hcc_pipeline/extraction/: __init__.py  llm.py  prompt.py  rule_based.py
src/hcc_pipeline/io/: __init__.py  notes.py
src/hcc_pipeline/utils/: __init__.py  conditions.py  text.py
src/scripts/: __init__.py  hcc_pipeline_cli.py
src/workflows/: __init__.py
src/workflows/hcc/: __init__.py
src/workflows/hcc/v1/: __init__.py  config.py  graph_entry.py  orchestrator.py  runner.py  types.py
src/workflows/hcc/v1/nodes/: __init__.py  conditions_utils.py  evaluate_hcc.py  extract_assessment.py  extract_conditions.py  extract_conditions_llm.py  extract_conditions_rule_based.py  hcc_evaluation.py  llm_parsing.py
src/workflows/hcc/v1/prompt_templates/: __init__.py  json_repair.py
src/workflows/hcc/v1/schemas/: __init__.py  llm.py
tests/: test_llm_pipeline.py
