[tool.poetry]
name = "hcc-pipeline"
version = "0.1.0"
description = "AI pipeline for extracting conditions and HCC relevance from clinical progress notes."
authors = ["Karre Kamal <karrekamal10@gmail.com>"]
readme = "README.md"
packages = [
  { include = "framework", from = "src" },
  { include = "api", from = "src" },
  { include = "workflows", from = "src" },
  { include = "scripts", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
firebase-admin = "^6.5.0"
google-cloud-firestore = "^2.19.0"
google-cloud-storage = "^2.18.0"
google-cloud-tasks = "^2.17.0"
google-cloud-aiplatform = "^1.66.0"
langgraph = "^1.0.0"
pydantic = "^2.7.0"
python-multipart = "^0.0.9"
tenacity = "^8.3.0"
uvicorn = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
langgraph-cli = { version = "^0.4.0", extras = ["inmem"] }

[tool.poetry.scripts]
hcc-pipeline = "scripts.hcc_pipeline_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
